# j4fsoc

./: .gitignore  .gitmodules  Makefile  README.md  default.nix  flake.nix  j4fsoc.xpr
docs/: Doxyfile  comparison.md  sources.md  tlm.md  verif.md
formal/: Makefile
fpga/: README.md  xc7z020-2clg400.sv
fpga/constraints/: wave_gen_timing.xdc 
rtl/: Makefile  config_pkg.sv  j4fsoc.sv  j4fsoc_core_top.sv  top.sv
rtl/core/: alu.sv  controller.sv  core_alu.sv  core_controller.sv  core_decoder.sv  core_regfile.sv  decoder.sv  opcodes_pkg.sv  regfile.sv
rtl/gdc/: README.md
rtl/generic/: counter.sv  debouncer.sv  lfsr.sv  onehotdecoder.sv  priorityonehot.sv  shift.sv  skidbuffer.sv
rtl/generic/crc/: crc16_parallel.sv
rtl/generic/flop/: flop.sv  flopen.sv  flopenl.sv  flopenr.sv  flopenrc.sv  flopr.sv  synchronizer.sv
rtl/generic/mem/: brom.sv  ram1p1rwbe.sv  rom.sv  rom1p1r.sv
rtl/peripheral/: spi.sv
rtl/ram/: wb_ram.sv
rtl/systolic/: README.md  systolic_array.sv  systolic_config_pkg.sv  systolic_pe.sv  wb_systolic_array.sv
rtl/wishbone/: README.md  wb.sv  wb_arbiter.sv  wb_arbiter_2.sv  wb_intf.sv
sim/: Makefile
sim/cosim/: README.md  top_tb.cpp
sim/firmware/: Makefile  counter.asm  fib.asm  kernel.ld  sqrt.asm
sim/sv/: Makefile  j4fsoc_tb.sv  riscv_asm.sv
sim/sv/core/: j4fsoc_top_tb_wb.sv
sim/sv/general/: riscv_asm.sv
sim/sv/systolic/: Makefile  (+5 more)
sim/tlm/: README.md
sim/tlm-cocotb/: main.py
sim/tlm-renode/: README.md
sim/tlm-sc/: CMakeLists.txt  main.cpp  top.cpp  top.h
sim/tlm2rtl-bridge/: Makefile
sim/verilator/: Makefile
(+16 files in other folders)
